// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`recordToDom should create a value with formatting 1`] = `
<React.Fragment>
  <em
    data-rich-text-format-boundary="true"
  >
    test
  </em>
  
</React.Fragment>
`;

exports[`recordToDom should create a value with formatting for split tags 1`] = `
<React.Fragment>
  <em
    data-rich-text-format-boundary="true"
  >
    test
  </em>
  
</React.Fragment>
`;

exports[`recordToDom should create a value with formatting with attributes 1`] = `
<React.Fragment>
  <a
    data-rich-text-format-boundary="true"
    href="#"
  >
    test
  </a>
  
</React.Fragment>
`;

exports[`recordToDom should create a value with image object 1`] = `
<React.Fragment>
  
  <img
    src=""
  />
  
</React.Fragment>
`;

exports[`recordToDom should create a value with image object and formatting 1`] = `
<React.Fragment>
  <em
    data-rich-text-format-boundary="true"
  >
    
    <img
      src=""
    />
    
  </em>
  
</React.Fragment>
`;

exports[`recordToDom should create a value with image object and text after 1`] = `
<React.Fragment>
  <em
    data-rich-text-format-boundary="true"
  >
    
    <img
      src=""
    />
    te
  </em>
  st
</React.Fragment>
`;

exports[`recordToDom should create a value with image object and text before 1`] = `
<React.Fragment>
  te
  <em>
    st
    <img
      src=""
    />
    
  </em>
  
</React.Fragment>
`;

exports[`recordToDom should create a value with nested formatting 1`] = `
<React.Fragment>
  <em>
    <strong
      data-rich-text-format-boundary="true"
    >
      test
    </strong>
  </em>
  
</React.Fragment>
`;

exports[`recordToDom should create a value without formatting 1`] = `
<React.Fragment>
  test
</React.Fragment>
`;

exports[`recordToDom should create an empty value 1`] = `
<React.Fragment>
  
  <br
    data-rich-text-padding="true"
  />
</React.Fragment>
`;

exports[`recordToDom should create an empty value from empty tags 1`] = `
<React.Fragment>
  
  <br
    data-rich-text-padding="true"
  />
</React.Fragment>
`;

exports[`recordToDom should filter format boundary attributes 1`] = `
<React.Fragment>
  <strong
    data-rich-text-format-boundary="true"
  >
    test
  </strong>
  
</React.Fragment>
`;

exports[`recordToDom should handle br 1`] = `
<React.Fragment>
  
  <br
    data-rich-text-line-break="true"
  />
  
  <br
    data-rich-text-padding="true"
  />
</React.Fragment>
`;

exports[`recordToDom should handle br with formatting 1`] = `
<React.Fragment>
  <em
    data-rich-text-format-boundary="true"
  >
    
    <br
      data-rich-text-line-break="true"
    />
    
  </em>
  
  <br
    data-rich-text-padding="true"
  />
</React.Fragment>
`;

exports[`recordToDom should handle br with text 1`] = `
<React.Fragment>
  te
  <br
    data-rich-text-line-break="true"
  />
  st
</React.Fragment>
`;

exports[`recordToDom should handle double br 1`] = `
<React.Fragment>
  a
  <br
    data-rich-text-line-break="true"
  />
  
  <br
    data-rich-text-line-break="true"
  />
  b
</React.Fragment>
`;

exports[`recordToDom should handle empty list value 1`] = `
<React.Fragment>
  <li>
    
    <br
      data-rich-text-padding="true"
    />
  </li>
</React.Fragment>
`;

exports[`recordToDom should handle empty multiline value 1`] = `
<React.Fragment>
  <p>
    
    <br
      data-rich-text-padding="true"
    />
  </p>
</React.Fragment>
`;

exports[`recordToDom should handle middle empty list value 1`] = `
<React.Fragment>
  <li>
    
    <br
      data-rich-text-padding="true"
    />
    
  </li>
  <li>
    
    <br
      data-rich-text-padding="true"
    />
    
  </li>
  <li>
    
    <br
      data-rich-text-padding="true"
    />
  </li>
</React.Fragment>
`;

exports[`recordToDom should handle multiline list value 1`] = `
<React.Fragment>
  <li>
    one
    <ul>
      <li>
        a
      </li>
      <li>
        b
        <ol>
          <li>
            1
          </li>
          <li>
            2
          </li>
        </ol>
      </li>
    </ul>
  </li>
  <li>
    three
  </li>
</React.Fragment>
`;

exports[`recordToDom should handle multiline value 1`] = `
<React.Fragment>
  <p>
    one
  </p>
  <p>
    two
  </p>
</React.Fragment>
`;

exports[`recordToDom should handle multiline value with element selection 1`] = `
<React.Fragment>
  <li>
    one
  </li>
</React.Fragment>
`;

exports[`recordToDom should handle multiline value with empty 1`] = `
<React.Fragment>
  <p>
    one
  </p>
  <p>
    
    <br
      data-rich-text-padding="true"
    />
  </p>
</React.Fragment>
`;

exports[`recordToDom should handle nested empty list value 1`] = `
<React.Fragment>
  <li>
    
    <br
      data-rich-text-padding="true"
    />
    <ul>
      <li>
        
        <br
          data-rich-text-padding="true"
        />
      </li>
    </ul>
  </li>
</React.Fragment>
`;

exports[`recordToDom should handle selection before br 1`] = `
<React.Fragment>
  a
  <br
    data-rich-text-line-break="true"
  />
  
  <br
    data-rich-text-line-break="true"
  />
  b
</React.Fragment>
`;

exports[`recordToDom should ignore formats at line separator 1`] = `
<React.Fragment>
  <p>
    <em>
      one
    </em>
  </p>
  <p>
    <em>
      two
    </em>
    
  </p>
</React.Fragment>
`;

exports[`recordToDom should preserve emoji 1`] = `
<React.Fragment>
  🍒
</React.Fragment>
`;

exports[`recordToDom should preserve emoji in formatting 1`] = `
<React.Fragment>
  <em
    data-rich-text-format-boundary="true"
  >
    🍒
  </em>
  
</React.Fragment>
`;

exports[`recordToDom should preserve non breaking space 1`] = `
<React.Fragment>
  test  test
</React.Fragment>
`;

exports[`recordToDom should remove padding 1`] = `
<React.Fragment>
  
  <br
    data-rich-text-padding="true"
  />
</React.Fragment>
`;

exports[`recordToDom should replace characters to format HTML with space 1`] = `
<React.Fragment>
   
</React.Fragment>
`;
